@@ -3446,6 +3446,15 @@ command to generate the output files.
       <match type="string" value="\x0d\nHEADER\x0d\n" offset="0:64"/>
     </magic>
   </mime-type>
+  <mime-type type="image/vnd.ms-modi">
+    <_comment>Microsoft Document Imaging format</_comment>
+    <acronym>MDI</acronym>
+    <expanded-acronym>Microsoft Document Imaging</expanded-acronym>
+    <glob pattern="*.mdi"/>
+    <magic priority="50">
+      <match type="string" value="\x45\x50\x2A\x00" offset="0"/>
+    </magic>
+  </mime-type>
   <mime-type type="image/x-3ds">
     <_comment>3D Studio image</_comment>
     <glob pattern="*.3ds"/>
