@@ -168,4 +168,5 @@ README.pdf application/pdf
 test.gnd application/gnunet-directory
 text.ps application/postscript
 test.cmake text/x-cmake ox
+bluerect.mdi image/vnd.ms-modi
 
