@@ -1,3 +1,11 @@
+2008-11-13  Pino Toscano  <pino@kde.org>
+
+	* freedesktop.org.xml.in: add definiton for the Microsoft Document
+	Imaging format IANA MIME type, image/vnd.ms-modi.
+	* tests/list:
+	* tests/bluerect.mdi: Add a test MDI file, kindly provided by
+	Brad Hards.
+
 2008-11-03  David Faure  <faure@kde.org>
 
 	* freedesktop.org.xml.in: add application/x-zip alias
